// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Input Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 hJjFGo sc-jgHCyG cnloRI sc-gTgzIj cjgnvU"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Input Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 hJjFGo sc-jgHCyG jDTnAL sc-gTgzIj cjgnvU"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Input Monospace 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 hJjFGo sc-jgHCyG fbrLsF sc-gTgzIj cjgnvU"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Input With Placeholder 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 hJjFGo sc-jgHCyG cnloRI sc-gTgzIj cjgnvU"
        placeholder="This is a placeholder"
        value=""
      />
    </div>
  </div>
</div>
`;
